; ModuleID = '/home/carl/AnghaBench/linux/tools/power/cpupower/lib/extr_cpuidle.c_cpuidle_get_governor.c'
source_filename = "/home/carl/AnghaBench/linux/tools/power/cpupower/lib/extr_cpuidle.c_cpuidle_get_governor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPUIDLE_GOVERNOR_RO = common dso_local global i32 0, align 4
@CPUIDLE_GOVERNOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cpuidle_get_governor() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i32, i32* @CPUIDLE_GOVERNOR_RO, align 4
  %4 = call i8* @sysfs_cpuidle_get_one_string(i32 %3)
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %0
  %8 = load i32, i32* @CPUIDLE_GOVERNOR, align 4
  %9 = call i8* @sysfs_cpuidle_get_one_string(i32 %8)
  store i8* %9, i8** %1, align 8
  br label %12

10:                                               ; preds = %0
  %11 = load i8*, i8** %2, align 8
  store i8* %11, i8** %1, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i8*, i8** %1, align 8
  ret i8* %13
}

declare dso_local i8* @sysfs_cpuidle_get_one_string(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
